--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,6 @@ h1 {
 .todoListClass {
   background-color: rgb(241 241 241);
   width: 80%;
-  display: inline-block;
   border: none;
 }
 
@@ -15,13 +14,20 @@ h1 {
 }
 
 .editClass {
-  display: inline-block;
   background-color: rgb(99, 255, 47);
   width: 5%;
 }
 
 .deleteClass {
-  display: inline-block;
   background-color: red;
   width: 5%;
+}
+
+.listClass {
+  display: flex;
+}
+
+.checkClass {
+  background-color: rgb(241 241 241);
+  width: max-content;
 }
